--- a/final_student.ipynb
+++ b/final_student.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "1ca37ebd",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9043a2a5",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "    # Expected file: submission.csv under the runs folder\n",
     "    #   columns: id + either\n",
     "    #     (pA, pB, pTie)  OR  (logit_A, logit_B, logit_Tie)\n",
-    "    \"teacher_train_path\": \"./runs/submission.csv\",\n",
+    "    \"teacher_train_path\": \"./runs/oof_combined.csv\",\n",
     "\n",
     "    # Where to save student artifacts (used by combination.ipynb)\n",
     "    \"out_dir\": \"./student_outputs\",\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "1bc1ac7c",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "'mps'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7fa8f952",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "34513939",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "f83bf994",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "9541bdb2",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "cfc65155",
    "metadata": {},
    "outputs": [],
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "240cc3a9",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ec02528f",
    "metadata": {},
    "outputs": [
@@ -816,17 +816,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fold 0 | Epoch 1/3: 100%|██████████| 22991/22991 [2:04:37<00:00,  3.07it/s, loss=1.2328]  \n",
-      "Fold 0 | Epoch 2/3: 100%|██████████| 22991/22991 [1:50:37<00:00,  3.46it/s, loss=0.9623]\n",
-      "Fold 0 | Epoch 3/3: 100%|██████████| 22991/22991 [1:50:15<00:00,  3.48it/s, loss=2.2260]\n",
-      "Validating Fold 0: 100%|██████████| 2874/2874 [11:11<00:00,  4.28it/s]\n"
+      "Fold 0 | Epoch 1/3: 100%|██████████| 22991/22991 [1:49:29<00:00,  3.50it/s, loss=0.5719]\n",
+      "Fold 0 | Epoch 2/3: 100%|██████████| 22991/22991 [1:49:54<00:00,  3.49it/s, loss=0.7672]\n",
+      "Fold 0 | Epoch 3/3: 100%|██████████| 22991/22991 [1:49:55<00:00,  3.49it/s, loss=1.1242]\n",
+      "Validating Fold 0: 100%|██████████| 2874/2874 [11:00<00:00,  4.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 0: log-loss = 1.029039\n",
+      "Fold 0: log-loss = 1.027941\n",
       "\n",
       "=== Fold 2/5 ===\n"
      ]
@@ -850,17 +850,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fold 1 | Epoch 1/3: 100%|██████████| 22991/22991 [1:50:00<00:00,  3.48it/s, loss=1.2175]\n",
-      "Fold 1 | Epoch 2/3: 100%|██████████| 22991/22991 [1:50:01<00:00,  3.48it/s, loss=1.2505]\n",
-      "Fold 1 | Epoch 3/3: 100%|██████████| 22991/22991 [1:50:24<00:00,  3.47it/s, loss=1.1449]\n",
-      "Validating Fold 1: 100%|██████████| 2874/2874 [11:19<00:00,  4.23it/s]\n"
+      "Fold 1 | Epoch 1/3: 100%|██████████| 22991/22991 [1:49:38<00:00,  3.49it/s, loss=1.1380]\n",
+      "Fold 1 | Epoch 2/3: 100%|██████████| 22991/22991 [1:49:56<00:00,  3.49it/s, loss=0.8962]\n",
+      "Fold 1 | Epoch 3/3: 100%|██████████| 22991/22991 [1:50:26<00:00,  3.47it/s, loss=1.2276]\n",
+      "Validating Fold 1: 100%|██████████| 2874/2874 [13:44<00:00,  3.49it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: log-loss = 1.042005\n",
+      "Fold 1: log-loss = 1.033785\n",
       "\n",
       "=== Fold 3/5 ===\n"
      ]
@@ -884,19 +884,108 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fold 2 | Epoch 1/3: 100%|██████████| 22991/22991 [1:51:06<00:00,  3.45it/s, loss=1.0767]\n",
-      "Fold 2 | Epoch 2/3: 100%|██████████| 22991/22991 [1:56:45<00:00,  3.28it/s, loss=1.1375]\n",
-      "Fold 2 | Epoch 3/3: 100%|██████████| 22991/22991 [1:54:27<00:00,  3.35it/s, loss=1.1529]\n",
-      "Validating Fold 2: 100%|██████████| 2874/2874 [10:59<00:00,  4.36it/s]\n"
+      "Fold 2 | Epoch 1/3: 100%|██████████| 22991/22991 [1:55:28<00:00,  3.32it/s, loss=1.2765]\n",
+      "Fold 2 | Epoch 2/3: 100%|██████████| 22991/22991 [1:49:49<00:00,  3.49it/s, loss=0.9549]\n",
+      "Fold 2 | Epoch 3/3: 100%|██████████| 22991/22991 [1:48:33<00:00,  3.53it/s, loss=0.6729]\n",
+      "Validating Fold 2: 100%|██████████| 2874/2874 [10:54<00:00,  4.39it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 2: log-loss = 1.033705\n",
+      "Fold 2: log-loss = 1.021212\n",
       "\n",
       "=== Fold 4/5 ===\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 10,717,443 || all params: 195,141,894 || trainable%: 5.4921\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fold 3 | Epoch 1/3: 100%|██████████| 22991/22991 [1:48:36<00:00,  3.53it/s, loss=1.2259]\n",
+      "Fold 3 | Epoch 2/3: 100%|██████████| 22991/22991 [1:48:32<00:00,  3.53it/s, loss=1.0448]\n",
+      "Fold 3 | Epoch 3/3: 100%|██████████| 22991/22991 [1:48:32<00:00,  3.53it/s, loss=1.3937]\n",
+      "Validating Fold 3: 100%|██████████| 2874/2874 [10:54<00:00,  4.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 3: log-loss = 1.029727\n",
+      "\n",
+      "=== Fold 5/5 ===\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 10,717,443 || all params: 195,141,894 || trainable%: 5.4921\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fold 4 | Epoch 1/3: 100%|██████████| 22991/22991 [1:48:34<00:00,  3.53it/s, loss=1.0460]\n",
+      "Fold 4 | Epoch 2/3: 100%|██████████| 22991/22991 [1:52:19<00:00,  3.41it/s, loss=0.9658]\n",
+      "Fold 4 | Epoch 3/3: 100%|██████████| 22991/22991 [1:54:21<00:00,  3.35it/s, loss=1.0382]\n",
+      "Validating Fold 4: 100%|██████████| 2874/2874 [11:40<00:00,  4.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 4: log-loss = 1.028583\n",
+      "\n",
+      "Overall OOF log-loss: 1.028250\n",
+      "Saved OOF -> ./student_outputs/student_oof_probs.csv\n",
+      "Averaging model weights...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 10,717,443 || all params: 195,141,894 || trainable%: 5.4921\n",
+      "Saved averaged weights -> ./student_outputs/student_model_avg.pt\n",
+      "Predicting on test set...\n",
+      "Saved test predictions -> ./student_outputs/student_test_probs.csv\n",
+      "✅ Training complete — checkpoints are saved, you can resume anytime!\n"
      ]
     }
    ],
@@ -904,6 +993,14 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00e77dfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
