--- a/student.ipynb
+++ b/student.ipynb
@@ -812,7 +812,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ML_venv",
    "language": "python",
    "name": "python3"
   },
@@ -826,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
